--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,22 +7,22 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 	<div slot="footer"></div>
 	<main class="flex h-full min-h-screen flex-col items-center justify-center p-20">
 		<div class="text-center">
-			<h1 class="mb-8 text-4xl font-bold text-gray-800">404: Page Not Found</h1>
+			<h1 class="mb-8 text-4xl font-bold text-gray-800 dark:text-gray-200">404: Page Not Found</h1>
 			<div class="mb-8">
 				<div
-					class="tenor-gif-embed"
+					class="tenor-gif-embed mx-auto"
 					data-postid="10251428"
 					data-share-method="host"
 					data-aspect-ratio="1.03734"
 					data-width="100%"
 				>
-					<a href="https://tenor.com/view/pulp-fiction-john-travolta-lost-where-wtf-gif-10251428"
+					<a class="rounded" href="https://tenor.com/view/pulp-fiction-john-travolta-lost-where-wtf-gif-10251428"
 						>Pulp Fiction John Travolta GIF</a
 					>from <a href="https://tenor.com/search/pulp+fiction-gifs">Pulp Fiction GIFs</a>
 				</div>
 				<script is:inline type="text/javascript" async src="https://tenor.com/embed.js"></script>
 			</div>
-			<p class="mb-8 text-2xl font-semibold text-gray-700">Looks like you're lost</p>
+			<p class="mb-8 text-2xl font-semibold text-gray-700 dark:text-gray-400">Looks like you're lost</p>
 			<a
 				href="/"
 				class="inline-block transform rounded-lg bg-blue-500 px-6 py-3 font-bold text-white transition duration-300 ease-in-out hover:scale-105 hover:bg-blue-600"
